--- a/CRMS-master/templates/car/register.html
+++ b/CRMS-master/templates/car/register.html
@@ -12,7 +12,7 @@
 <main class="main-content mt-0 ps">
   {% comment %} <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signup-cover.jpg'); background-position: top;"> {% endcomment %}
     {% comment %} <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('/static/assets/img/IMG_8750.JPG'); background-position: top;"> {% endcomment %}
-      <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('/static/assets/img/Rent a Car Professional Web Banner Design (1).png'); background-position: top;">
+      <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('/static/assets/img/car.jpg'); background-position: center;">
       
       
     <span class="mask bg-gradient-dark opacity-6"></span>
