--- a/CRMS-master/templates/car/list.html
+++ b/CRMS-master/templates/car/list.html
@@ -177,7 +177,7 @@
             <h2 class="ftco-heading-2">Customer Support</h2>
             <ul class="list-unstyled">
               <li><a href="#" class="py-2 d-block">FAQ</a></li>
-              <li><a href="#" class="py-2 d-block">Payment Option</a></li>
+              <li><a href="../payment/" class="py-2 d-block">Payment Option</a></li>
               <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
               <li><a href="#" class="py-2 d-block">How it works</a></li>
               <li><a href="#" class="py-2 d-block">Contact Us</a></li>
