--- a/CRMS-master/templates/index.html
+++ b/CRMS-master/templates/index.html
@@ -42,12 +42,10 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a url="../car/" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="car/list" class="nav-link">Car_List</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="car.html" class="nav-link">Cars</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="car/payment" class="nav-link">Pay</a></li>
+	          
 	        </ul>
 	      </div> 
 	    </div>
