--- a/CRMS-master/templates/navbar.html
+++ b/CRMS-master/templates/navbar.html
@@ -18,7 +18,7 @@
           <li class="nav-item d-flex align-items-center">
             <a href="javascript:;" class="nav-link text-white font-weight-bold px-0">
               <i class="fa fa-user me-sm-1" aria-hidden="true"></i>
-              <span class="d-sm-inline d-none">Sign In</span>
+              <span  href = "user/login"class="d-sm-inline d-none">Sign In</span>
             </a>
           </li>
           <li class="nav-item d-xl-none ps-3 d-flex align-items-center">
